src/test/ui/never_type/diverging-fallback-control-flow.stderr
error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:32:13
   |
LL |         x = UnitDefault::default();
   |             ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:44:13
   |
LL |         x = UnitDefault::default();
   |             ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:50:9
   |
LL |         UnitDefault::default()
   |         ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:60:9
   |
LL |         UnitDefault::default()
   |         ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:65:23
   |
LL |     let _x = match Ok(UnitDefault::default()) {
   |                       ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:73:23
   |
LL |     let _x = match Ok(UnitDefault::default()) {
   |                       ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:85:19
   |
LL |             break UnitDefault::default();
   |                   ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: UnitDefault` is not satisfied
  --> $DIR/diverging-fallback-control-flow.rs:95:19
   |
LL |             break UnitDefault::default();
   |                   ^^^^^^^^^^^^^^^^^^^^ the trait `UnitDefault` is not implemented for `!`
   |
   = note: this trait is implemented for `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0277`.
